Fix for editor overflow

--- a/ui/style.css
+++ b/ui/style.css
@@ -40,13 +40,17 @@ header a {
   font-style: italic;
 }
 
+.editor-container {
+  height: 200px;
+  resize: vertical;
+  overflow: auto;
+}
+
 .editor {
   width: 100%;
   border: 0;
   font-family: monospace;
   font-size: 1.1rem;
-  height: 200px;
-  resize: vertical;
   counter-reset: line;
 }
 
